Fix misalignment fit times and stars in CV

--- a/content/css/custom.css
+++ b/content/css/custom.css
@@ -10,6 +10,7 @@
     position: absolute;
     right: 0;
     top: 0;
+    padding-top: 5px; /* Fix misalignment */
   }
 }
 
